seo: implement GEO (Generative Engine Optimization) with FinancialReport schema and refined data attribution

--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,58 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="title-korea">KOSPI 공포 탐욕 지수 - 실시간 국내 주식 시장 심리 분석 | anse.ai</title>
-<meta name="description" content="코스피(KOSPI)의 변동성과 모멘텀을 분석하여 실시간 공포 탐욕 지수를 제공합니다. AI 기반 시장 분석과 투자 격언으로 현명한 투자 판단을 도와드립니다." data-i18n="desc-korea"/>
+<title data-i18n="title-korea">KOSPI 공포 탐욕 지수 - 코스피 시장 심리 및 AI 지표 분석 | anse.ai.kr</title>
+<meta name="description" content="코스피(KOSPI)의 모멘텀, 주가 강도, 시장 폭, 변동성, 옵션 비율을 종합 분석하여 일일 공포 탐욕 지수를 제공합니다. anse.ai.kr의 AI 모델이 분석한 시장 리포트를 확인하세요." data-i18n="desc-korea"/>
 <link rel="canonical" href="https://anse.ai.kr/"/>
+<link rel="alternate" hreflang="ko" href="https://anse.ai.kr/" />
+<link rel="alternate" hreflang="en" href="https://anse.ai.kr/" />
+<link rel="alternate" hreflang="x-default" href="https://anse.ai.kr/" />
+
+<!-- Structured Data for GEO (AI Search Optimization) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FinancialReport",
+  "name": "KOSPI Fear & Greed Index Analysis",
+  "description": "Daily analysis of Korea stock market sentiment using KOSPI momentum, volatility, and option data.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "anse.ai.kr",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://anse.ai.kr/images/neutral.png"
+    }
+  },
+  "sourceOrganization": [
+    {
+      "@type": "Organization",
+      "name": "KRX (Korea Exchange)"
+    },
+    {
+      "@type": "Organization",
+      "name": "KOFIA (Korea Financial Investment Association)"
+    }
+  ],
+  "about": {
+    "@type": "Thing",
+    "name": "KOSPI Market Sentiment"
+  }
+}
+</script>
 
 <!-- Open Graph / Facebook -->
-<meta property="og:site_name" content="anse.ai - 주식 시장 심리 분석"/>
-<meta property="og:title" content="KOSPI 공포 탐욕 지수 - 실시간 국내 주식 시장 심리 분석" data-i18n="title-korea"/>
-<meta property="og:description" content="실시간 KOSPI 공포 탐욕 지수와 AI 시장 리포트를 확인하세요." data-i18n="desc-korea"/>
+<meta property="og:site_name" content="anse.ai.kr - 주식 시장 심리 분석"/>
+<meta property="og:title" content="KOSPI 공포 탐욕 지수 - 코스피 시장 심리 및 AI 지표 분석" data-i18n="title-korea"/>
+<meta property="og:description" content="일일 업데이트되는 KOSPI 공포 탐욕 지수와 AI 시장 분석 리포트를 확인하세요." data-i18n="desc-korea"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
-<meta name="author" content="anse.ai"/>
+<meta name="author" content="anse.ai.kr"/>
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="KOSPI 공포 탐욕 지수 - 실시간 국내 주식 시장 심리 분석" data-i18n="title-korea"/>
-<meta name="twitter:description" content="실시간 KOSPI 공포 탐욕 지수와 AI 시장 리포트를 확인하세요." data-i18n="desc-korea"/>
+<meta name="twitter:title" content="KOSPI 공포 탐욕 지수 - 코스피 시장 심리 및 AI 지표 분석" data-i18n="title-korea"/>
+<meta name="twitter:description" content="일일 업데이트되는 KOSPI 공포 탐욕 지수와 AI 시장 분석 리포트를 확인하세요." data-i18n="desc-korea"/>
 <meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
 
 <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
