--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -3,43 +3,58 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="title-us">미국 주식 공포 탐욕 지수 - CNN Fear & Greed Index 분석 | anse.ai</title>
-<meta name="description" content="미국 주식 시장의 실시간 공포 탐욕 지수(CNN Fear & Greed Index)를 확인하세요. S&P 500 모멘텀, 변동성, 옵션 데이터를 바탕으로 전문적인 시장 심리 분석을 제공합니다." data-i18n="desc-us"/>
+<title data-i18n="title-us">미국 주식 공포 탐욕 지수 - S&P 500 및 주요 경제 지표 AI 분석 | anse.ai.kr</title>
+<meta name="description" content="S&P 500, 기준금리, VIX, 비농업 고용, 실업률, 10년물 금리를 바탕으로 미국 시장 심리를 분석합니다. anse.ai.kr에서 일일 업데이트되는 AI 시장 리포트를 확인하세요." data-i18n="desc-us"/>
 <link rel="canonical" href="https://anse.ai.kr/sentiment.html"/>
+<link rel="alternate" hreflang="ko" href="https://anse.ai.kr/sentiment.html" />
+<link rel="alternate" hreflang="en" href="https://anse.ai.kr/sentiment.html" />
+<link rel="alternate" hreflang="x-default" href="https://anse.ai.kr/sentiment.html" />
 
 <!-- Open Graph / Facebook -->
-<meta property="og:site_name" content="anse.ai - 주식 시장 심리 분석"/>
-<meta property="og:title" content="미국 주식 공포 탐욕 지수 - CNN Fear & Greed Index 분석" data-i18n="title-us"/>
-<meta property="og:description" content="미국 주식 시장의 투자 심리를 한눈에 파악하세요." data-i18n="desc-us"/>
+<meta property="og:site_name" content="anse.ai.kr - 주식 시장 심리 분석"/>
+<meta property="og:title" content="미국 주식 공포 탐욕 지수 - S&P 500 및 주요 경제 지표 AI 분석" data-i18n="title-us"/>
+<meta property="og:description" content="일일 업데이트되는 미국 공포 탐욕 지수와 주요 경제 지표 분석 리포트를 확인하세요." data-i18n="desc-us"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/sentiment.html"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
-<meta name="author" content="anse.ai"/>
+<meta name="author" content="anse.ai.kr"/>
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="미국 주식 공포 탐욕 지수 - CNN Fear & Greed Index 분석" data-i18n="title-us"/>
-<meta name="twitter:description" content="미국 주식 시장의 투자 심리를 한눈에 파악하세요." data-i18n="desc-us"/>
+<meta name="twitter:title" content="미국 주식 공포 탐욕 지수 - S&P 500 및 주요 경제 지표 AI 분석" data-i18n="title-us"/>
+<meta name="twitter:description" content="일일 업데이트되는 미국 공포 탐욕 지수와 주요 경제 지표 분석 리포트를 확인하세요." data-i18n="desc-us"/>
 <meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
 
-<!-- Structured Data (JSON-LD) -->
+<!-- Structured Data for GEO (AI Search Optimization) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "anse.ai US Fear & Greed Index Analysis",
+  "@type": "FinancialReport",
+  "name": "US Market Fear & Greed Index Analysis",
   "url": "https://anse.ai.kr/sentiment.html",
-  "description": "Analysis of US stock market sentiment using CNN Business Fear & Greed Index components.",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "미국 공포 탐욕 지수란 무엇인가요?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "미국 주식 시장의 투자 심리를 측정하기 위해 CNN Business에서 개발한 지수입니다. 시장의 모멘텀, 주가 강도, 옵션 거래량 등 7가지 요소를 종합하여 산출합니다."
-      }
+  "description": "Daily analysis of US stock market sentiment using S&P 500, VIX, Interest Rates, and Employment data.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "anse.ai.kr",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://anse.ai.kr/images/neutral.png"
     }
-  ]
+  },
+  "sourceOrganization": [
+    {
+      "@type": "Organization",
+      "name": "CNN Business"
+    },
+    {
+      "@type": "Organization",
+      "name": "Federal Reserve Bank of St. Louis (FRED)"
+    }
+  ],
+  "about": {
+    "@type": "Thing",
+    "name": "US Market Sentiment"
+  }
 }
 </script>
 
