--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,14 @@
 <meta property="og:description" content="일일 업데이트되는 KOSPI 공포 탐욕 지수와 AI 시장 분석 리포트를 확인하세요." data-i18n="desc-korea"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/"/>
-<meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
+<meta property="og:image" content="https://anse.ai.kr/images/anse_ai_kr.png"/>
 <meta name="author" content="anse.ai.kr"/>
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="KOSPI 공포 탐욕 지수 - 코스피 시장 심리 및 AI 지표 분석" data-i18n="title-korea"/>
 <meta name="twitter:description" content="일일 업데이트되는 KOSPI 공포 탐욕 지수와 AI 시장 분석 리포트를 확인하세요." data-i18n="desc-korea"/>
-<meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
+<meta name="twitter:image" content="https://anse.ai.kr/images/anse_ai_kr.png"/>
 
 <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
@@ -127,11 +127,11 @@
 <h3 class="text-lg font-bold" data-i18n="current-sentiment">Current Sentiment</h3>
 <span id="last-updated-time" class="text-sm font-medium text-[#49699c]"><span data-i18n="last-updated">마지막 업데이트</span>: --:--</span>
 </div>
-<div class="relative flex flex-col items-center py-10">
+<div class="relative flex flex-col items-center py-10" role="img" aria-label="KOSPI Fear and Greed Index Gauge">
 <!-- Gauge visualization -->
 <div class="relative h-48 w-80 overflow-hidden rounded-t-full bg-slate-100 dark:bg-slate-800">
-<div class="absolute inset-0 gauge-gradient opacity-80"></div>
-<div class="absolute bottom-0 left-1/2 h-32 w-64 -translate-x-1/2 rounded-t-full bg-white dark:bg-[#161f2c]"></div>
+<div class="absolute inset-0 gauge-gradient opacity-80" aria-hidden="true"></div>
+<div class="absolute bottom-0 left-1/2 h-32 w-64 -translate-x-1/2 rounded-t-full bg-white dark:bg-[#161f2c]" aria-hidden="true"></div>
 <!-- Needle -->
 <div class="absolute bottom-0 left-1/2 h-40 w-1 -translate-x-1/2 origin-bottom transition-transform duration-1000 ease-out" id="gauge-needle" style="transform: translateX(-50%) rotate(-90deg);">
 <div class="h-full w-full bg-slate-900 dark:bg-white rounded-full"></div>
@@ -189,6 +189,9 @@
     <h4 class="mb-4 text-sm font-bold text-[#49699c] uppercase tracking-wider" data-i18n="market-indicators">Market Indicators</h4>
     <div id="dynamic-indicators-container" class="space-y-4">
         <p class="text-xs text-slate-400">Loading indicators...</p>
+    </div>
+    <div class="mt-4 pt-4 border-t border-slate-100 dark:border-slate-800">
+        <p class="text-[10px] text-[#49699c] dark:text-slate-500" data-i18n="footer-desc-korea">Data provided by KRX and KOFIA.</p>
     </div>
 </div>
 
