style: replace all neutral.png references with anse_ai_kr.png for consistent branding

--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -38,7 +38,7 @@
     "name": "anse.ai.kr",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://anse.ai.kr/images/neutral.png"
+      "url": "https://anse.ai.kr/images/anse_ai_kr.png"
     }
   },
   "sourceOrganization": [
