--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     "name": "anse.ai.kr",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://anse.ai.kr/images/neutral.png"
+      "url": "https://anse.ai.kr/images/anse_ai_kr.png"
     }
   },
   "sourceOrganization": [
