--- a/public/refund.html
+++ b/public/refund.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="anse.ai.kr의 환불 및 구독 해지 정책에 대해 안내합니다." data-i18n="refund-title"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/refund.html"/>
-<meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
+<meta property="og:image" content="https://anse.ai.kr/images/anse_ai_kr.png"/>
 
 <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
