--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 <link rel="alternate" hreflang="en" href="https://anse.ai.kr/" />
 <link rel="alternate" hreflang="x-default" href="https://anse.ai.kr/" />
 
+<!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9750321636945438" crossorigin="anonymous"></script>
+
 <!-- Structured Data for GEO (AI Search Optimization) -->
 <script type="application/ld+json">
 {
