--- a/public/header.html
+++ b/public/header.html
@@ -95,7 +95,7 @@
                                 <p id="modal-user-email" class="text-sm text-[#49699c] dark:text-slate-400"></p>
                             </div>
                         </section>
-                        <!-- Subscription Status -->
+                        <!-- Subscription Status (Disabled for Compliance)
                         <section id="subscription-section" class="rounded-xl border border-primary/20 bg-primary/5 p-6 border-dashed">
                             <div class="flex flex-col gap-4">
                                 <div class="flex flex-col gap-1">
@@ -114,6 +114,7 @@
                                 </div>
                             </div>
                         </section>
+                        -->
                     </div>
                 </div>
 
