--- a/public/privacy.html
+++ b/public/privacy.html
@@ -67,7 +67,7 @@
 
             <section class="mb-8">
                 <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="privacy-section-1-t">1. 수집하는 개인정보 항목</h2>
-                <p class="leading-relaxed" data-i18n="privacy-section-1-d">본 웹사이트는 구글 로그인을 통해 사용자의 이름, 이메일 주소, 프로필 이미지를 수집합니다. 이는 사용자 식별 및 구독 서비스(리포트 발송) 제공을 위함입니다.</p>
+                <p class="leading-relaxed" data-i18n="privacy-section-1-d">본 웹사이트는 구글 로그인을 통해 사용자의 이름, 이메일 주소, 프로필 이미지를 수집합니다. 이는 사용자 식별 및 서비스(리포트 알림 발송) 제공을 위함입니다.</p>
             </section>
 
             <section class="mb-8">
