--- a/public/refund.html
+++ b/public/refund.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="refund-policy">환불정책 - anse.ai.kr</title>
-<meta name="description" content="anse.ai.kr의 환불 및 구독 해지 정책에 대해 안내합니다." data-i18n="refund-title"/>
+<title data-i18n="refund-policy">서비스 해지 안내 - anse.ai.kr</title>
+<meta name="description" content="anse.ai.kr의 서비스 해지 및 알림 중단 정책에 대해 안내합니다." data-i18n="refund-title"/>
 <link rel="canonical" href="https://anse.ai.kr/refund.html"/>
 
-<meta property="og:title" content="환불정책 - anse.ai.kr" data-i18n="refund-policy"/>
-<meta property="og:description" content="anse.ai.kr의 환불 및 구독 해지 정책에 대해 안내합니다." data-i18n="refund-title"/>
+<meta property="og:title" content="서비스 해지 안내 - anse.ai.kr" data-i18n="refund-policy"/>
+<meta property="og:description" content="anse.ai.kr의 서비스 해지 및 알림 중단 정책에 대해 안내합니다." data-i18n="refund-title"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/refund.html"/>
 <meta property="og:image" content="https://anse.ai.kr/images/anse_ai_kr.png"/>
@@ -61,30 +61,31 @@
 <main class="mx-auto max-w-[800px] px-6 py-12">
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 md:p-12 shadow-sm">
         <article class="prose dark:prose-invert max-w-none">
-            <h1 class="text-3xl font-black mb-8 dark:text-white" data-i18n="refund-policy">환불정책</h1>
+            <h1 class="text-3xl font-black mb-8 dark:text-white" data-i18n="refund-policy">서비스 해지 안내</h1>
             
             <section class="mb-8">
-                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="refund-section-1-t">구독 및 결제 안내</h2>
-                <p class="leading-relaxed" data-i18n="refund-section-1-d">
-                    'anse.ai.kr'의 유료 서비스는 선불 구독 방식으로 결제됩니다. 구독 기간 중 제공되는 리포트 서비스의 특성상 아래와 같은 환불 원칙을 적용합니다.
+                <h2 class="text-xl font-bold mb-4 dark:text-white">서비스 이용 안내</h2>
+                <p class="leading-relaxed">
+                    'anse.ai.kr'의 모든 시장 지표 분석 및 리포트 서비스는 현재 무료로 제공됩니다. 별도의 결제 시스템이 존재하지 않으므로 유료 결제에 따른 환불 절차는 해당하지 않습니다.
                 </p>
             </section>
 
             <section class="mb-8">
-                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="refund-section-2-t">환불 규정</h2>
+                <h2 class="text-xl font-bold mb-4 dark:text-white">이메일 알림 해지</h2>
                 <div class="flex flex-col gap-2">
+                    <p class="leading-relaxed">리포트 알림 수신을 중단하고 싶으신 경우 다음과 같은 방법으로 처리가 가능합니다.</p>
                     <ul class="list-disc pl-6 space-y-1">
-                        <li data-i18n="refund-li1">결제 후 7일 이내 (미이용 시): 구독 결제 후 7일 이내에 리포트 수신 등 서비스를 이용하지 않았을 경우 전액 환불이 가능합니다.</li>
-                        <li data-i18n="refund-li2">구독 중도 해지: 구독 기간 중간에 해지를 요청하실 경우, 이미 발송된 리포트와 이용 기간에 해당하는 금액을 일할 계산하여 공제한 후 잔여 금액을 환불해 드립니다.</li>
-                        <li data-i18n="refund-li3">환불 불가 사유: 디지털 콘텐츠 및 리포트 서비스의 특성상, 이미 수신한 정보에 대해서는 환불이 제한될 수 있습니다.</li>
+                        <li><strong>설정 메뉴 이용</strong>: 'My Account' 페이지의 설정 탭에서 알림 수신 여부를 변경할 수 있습니다.</li>
+                        <li><strong>회원 탈퇴</strong>: 계정 삭제 시 모든 개인정보와 알림 설정이 즉시 파기됩니다.</li>
+                        <li><strong>이메일 문의</strong>: 고객센터(info@anse.ai.kr)로 요청 주시면 신속히 처리해 드립니다.</li>
                     </ul>
                 </div>
             </section>
 
             <section class="mb-8">
-                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="refund-section-3-t">해지 방법</h2>
-                <p class="leading-relaxed" data-i18n="refund-section-3-d">
-                    구독 해지는 'My Account' 페이지 내 구독 관리 메뉴를 통하거나, 고객센터(info@anse.ai.kr)로 문의해 주시면 신속히 처리해 드립니다. 해지 후에는 다음 결제 예정일에 자동 결제가 이루어지지 않습니다.
+                <h2 class="text-xl font-bold mb-4 dark:text-white">정책 변경</h2>
+                <p class="leading-relaxed">
+                    추후 서비스 정책의 변화가 있을 경우, 최소 7일 전 웹사이트 공지사항을 통해 안내해 드릴 예정입니다.
                 </p>
             </section>
         </article>
@@ -94,14 +95,14 @@
     <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
         <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
             <div class="flex flex-col gap-2">
-                <p class="text-sm font-medium dark:text-white" data-i18n="refund-policy">Refund Policy</p>
-                <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="refund-title">anse.ai.kr 환불 정책에 대해 안내합니다.</p>
+                <p class="text-sm font-medium dark:text-white" data-i18n="refund-policy">Service Policy</p>
+                <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="refund-title">anse.ai.kr 서비스 정책에 대해 안내합니다.</p>
             </div>
             <div class="flex flex-wrap gap-4">
                 <a href="/about.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="about-us">서비스 소개</a>
                 <a href="/terms.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="terms-of-service">이용약관</a>
                 <a href="/privacy.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="privacy-policy">개인정보처리방침</a>
-                <a href="/refund.html" class="text-xs font-bold text-primary" data-i18n="refund-policy">환불정책</a>
+                <a href="/refund.html" class="text-xs font-bold text-primary" data-i18n="refund-policy">서비스 정책</a>
                 <span class="text-xs font-bold text-[#49699c] dark:text-slate-400" data-i18n="contact-us">Contact: info@anse.ai.kr</span>
             </div>
         </div>
