--- a/public/terms.html
+++ b/public/terms.html
@@ -71,13 +71,13 @@
             </section>
 
             <section class="mb-8">
-                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="terms-section-2-t">제 2 조 (유료 서비스: 이메일 리포트)</h2>
+                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="terms-section-2-t">제 2 조 (회원 서비스: 리포트 알림)</h2>
                 <div class="flex flex-col gap-2">
-                    <p class="leading-relaxed" data-i18n="terms-section-2-d">구독 회원에게는 다음과 같은 유료 서비스가 제공됩니다.</p>
+                    <p class="leading-relaxed" data-i18n="terms-section-2-d">가입 회원에게는 다음과 같은 서비스가 제공될 수 있습니다.</p>
                     <ul class="list-disc pl-6 space-y-1">
-                        <li data-i18n="terms-section-2-li1">일 1~2회 정기 이메일 리포트 발송 (KOSPI 및 US 시장 지표 요약)</li>
+                        <li data-i18n="terms-section-2-li1">정기 이메일 리포트 발송 (KOSPI 및 US 시장 지표 요약)</li>
                         <li data-i18n="terms-section-2-li2">인공지능(AI) 기반 시장 상황 분석 및 제언 요약</li>
-                        <li data-i18n="terms-section-2-li3">기타 구독자 전용 프리미엄 데이터 및 기능</li>
+                        <li data-i18n="terms-section-2-li3">기타 가입자 전용 데이터 및 기능</li>
                     </ul>
                 </div>
             </section>
