--- a/public/terms.html
+++ b/public/terms.html
@@ -66,7 +66,7 @@
             <section class="mb-8">
                 <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="terms-section-1-t">제 1 조 (목적)</h2>
                 <p class="leading-relaxed" data-i18n="terms-section-1-d">
-                    본 약관은 'anse.ai.kr'(이하 '서비스')가 제공하는 금융 정보 제공 서비스 및 유료 구독 서비스의 이용 조건 및 절차에 관한 사항을 규정함을 목적으로 합니다.
+                    본 약관은 'anse.ai.kr'(이하 '서비스')가 제공하는 금융 정보 및 시장 분석 리포트 알림 서비스의 이용 조건 및 절차에 관한 사항을 규정함을 목적으로 합니다.
                 </p>
             </section>
 
@@ -75,7 +75,7 @@
                 <div class="flex flex-col gap-2">
                     <p class="leading-relaxed" data-i18n="terms-section-2-d">가입 회원에게는 다음과 같은 서비스가 제공될 수 있습니다.</p>
                     <ul class="list-disc pl-6 space-y-1">
-                        <li data-i18n="terms-section-2-li1">정기 이메일 리포트 발송 (KOSPI 및 US 시장 지표 요약)</li>
+                        <li data-i18n="terms-section-2-li1">이메일 리포트 발송 (KOSPI 및 US 시장 지표 요약)</li>
                         <li data-i18n="terms-section-2-li2">인공지능(AI) 기반 시장 상황 분석 및 제언 요약</li>
                         <li data-i18n="terms-section-2-li3">기타 가입자 전용 데이터 및 기능</li>
                     </ul>
