Fix: S&P 500 index loading issue on sentiment page
Changed the event listener from 'DOMContentLoaded' to 'load' in public/sentiment.html. This addresses a race condition where the S&P 500 index initially showed 'loading' when navigating from the main page, but loaded correctly on refresh. The 'load' event ensures that all resources, including Firebase SDK, are fully initialized before attempting to fetch and display data, resolving the issue.

--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -517,7 +517,7 @@
             }
         }
 
-        document.addEventListener('DOMContentLoaded', () => {
+            window.addEventListener('load', () => {
             fetchLatestUSIndex();
             updateUSMarketStatus();
             displayRandomProverb();
